objects/DocGenCommercial__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this contains the list of json names that needs to be sent to Commercial Opportunity</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>This field used as identifier to bucket and/or separate fields per document type (ie: PR0/PR1)</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <label>sObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DocGenCommercial</label>
</CustomObject>